database/postgres-operator/manifests/defaults/ui/gen-output/postgres-operator-ui.default.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: postgres-operator-ui
  name: postgres-operator-ui
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgres-operator-ui
  template:
    metadata:
      labels:
        name: postgres-operator-ui
    spec:
      containers:
      - env:
        - name: APP_URL
          value: http://localhost:8081
        - name: OPERATOR_API_URL
          value: http://postgres-operator:8080
        - name: OPERATOR_CLUSTER_NAME_LABEL
          value: cluster-name
        - name: RESOURCES_VISIBLE
          value: "False"
        - name: TARGET_NAMESPACE
          value: default
        - name: TEAMS
          value: |-
            [
              "acid"
            ]
        - name: OPERATOR_UI_CONFIG
          value: |-
            [...]
        image: registry.opensource.zalan.do/acid/postgres-operator-ui:v1.9.0
        name: service
        ports:
        - containerPort: 8081
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
      serviceAccountName: postgres-operator-ui
