database/postgres-operator/manifests/defaults/ui/gen-output/postgres-operator-ui.default.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    application: postgres-operator-ui
  name: postgres-operator-ui
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    name: postgres-operator-ui
  type: ClusterIP
