database/postgres-operator/manifests/defaults/ui/gen-output/postgres-operator-ui.default.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    application: postgres-operator-ui
  name: postgres-operator-ui
  namespace: default
spec:
  rules:
  - host: ui.example.org
    http:
      paths:
      - backend:
          service:
            name: postgres-operator-ui
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
